added main Javascript for np.html
added main Javascript for np.html

--- a/searchNationalParks.html
+++ b/searchNationalParks.html
@@ -40,24 +40,6 @@
             </div>
             <div id="results"></div>
         </div>
-        <!--<div class="search-container">
-            <h1>Find Your Perfect Park</h1>
-            <div class="search-options">
-                <label for="state-select">Select a State/Territory:</label>
-                <select id="state-select">
-                    <option value="">--Select State/Territory--</option>
-                </select>
-    
-                <label for="type-select">Select a Park Type:</label>
-                <select id="type-select">
-                    <option value="">--Select Park Type--</option>
-                </select>
-    
-                <button id="search-button-location">Search by Location</button>
-                <button id="search-button-type">Search by Park Type</button>
-            </div>
-            <div id="results"></div>
-        </div>-->
     </main>
     <script src="/scripts/locationData.js"></script>
     <script src="/scripts/parkTypeData.js"></script>
@@ -65,3 +47,53 @@
     <script src="/scripts/np.js"></script>
 </body>
 </html>
+
+<!--<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Search National Parks</title>
+    <link rel="stylesheet" href="/css/universalStyles.css">
+    <link rel="stylesheet" href="/css/np.css">
+</head>
+<body>
+    <nav class="navbar">
+        <h1>National Parks</h1>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="searchNationalParks.html">Search National Parks</a></li>
+            <li><a href="mountainInfo.html">Mountain Information</a></li>
+        </ul>
+    </nav>
+    <main>
+        <h2>Search National Parks</h2>
+        <p>Use the search feature to find information about different national parks.</p>
+        <div class="search-container">
+            <h1>Find Your Perfect Park</h1>
+            <div class="search-options">
+                <div>
+                    <input type="radio" id="search-location" name="search-option" value="location" checked>
+                    <label for="search-location">Search by Location</label>
+                    <select id="state-select">
+                        <option value="">--Select State/Territory--</option>
+                    </select>
+                </div>
+                <div>
+                    <input type="radio" id="search-type" name="search-option" value="type">
+                    <label for="search-type">Search by Park Type</label>
+                    <select id="type-select" disabled>
+                        <option value="">--Select Park Type--</option>
+                    </select>
+                </div>
+                <button id="search-button">Search</button>
+            </div>
+            <div id="results"></div>
+        </div>
+    </main>
+    <script src="/scripts/locationData.js"></script>
+    <script src="/scripts/parkTypeData.js"></script>
+    <script src="/scripts/n.js"></script>
+    <script src="/scripts/np.js"></script>
+</body>
+</html>-->
