--- a/index.html
+++ b/index.html
@@ -1,11 +1,19 @@
+
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>National Parks - Homepage</title>
     <link rel="stylesheet" href="/css/universalStyles.css">
+    <link rel="stylesheet" href="/css/index.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+        <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
+  
 </head>
+
 <body>
     <nav class="navbar">
         <h1>National Parks</h1>
@@ -15,9 +23,69 @@
             <li><a href="mountainInfo.html">Mountain Information</a></li>
         </ul>
     </nav>
-    <main>
+    <main class="container">
         <h2>Welcome to National Parks</h2>
-        <p>Explore the beauty of national parks across the country.</p>
+        <h3>Explore the beauty of national parks across the country.</h3>
+        <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active" data-bs-interval="4000">
+                    <img src="images/canyon-1740973_640.jpg" class="d-block w-100" alt="Canyon">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h3> planning ahead for a trip to a beautiful National park made easy.</h3>
+                    </div>
+                </div>
+                <div class="carousel-item" data-bs-interval="4000">
+                    <img src="images/mountain-8590965_640.jpg" class="d-block w-100" alt="Mountain">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h3>View information about mountains and its properties.</h3>
+                    </div>
+                </div>
+               
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>
+
+        <div class="row card-custom">
+            <div class="col-md-6">
+                <div class="card">
+                    <img src="images/Isolation-StoryImg.jpg" class="card-img-top" alt="Example Image 1">
+                    <div class="card-body">
+                        <h5 class="card-title">National Parks</h5>
+                        <p class="card-text">Click below to browse through the different National parks </p>
+                        <a href="searchNationalParks.html" class="btn btn-success">National Parks</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="card">
+                    <img src="images/EOsceola-StoryImg_2.jpg" class="card-img-top" alt="Example Image 2">
+                    <div class="card-body">
+                        <h5 class="card-title">Mountains</h5>
+                        <p class="card-text">Click below to browse through the different mountains.</p>
+                        <a href="mountainInfo.html" class="btn btn-success">Mountains</a>
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
+    <footer>&copy; Rene Banuelos Arellano 2024</footer>
+
+    <!-- Bootstrap JS and Popper.js -->
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+    integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+    crossorigin="anonymous"></script>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
+    integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
+    crossorigin="anonymous"></script>
+   
 </body>
+
 </html>
