--- a/mountainInfo.html
+++ b/mountainInfo.html
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mountain Information</title>
     <link rel="stylesheet" href="/css/universalStyles.css">
+    <link rel="stylesheet" href="/css/mountainInfo.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+        <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
+    
 </head>
+
 <body>
     <nav class="navbar">
         <h1>National Parks</h1>
@@ -15,9 +22,24 @@
             <li><a href="mountainInfo.html">Mountain Information</a></li>
         </ul>
     </nav>
-    <main>
-        <h2>Mountain Information</h2>
-        <p>Learn about the mountains located in various national parks.</p>
-    </main>
+    <div class="container1">
+        <h1>Mountain Information</h1>
+        <select id="mountainDropdown">
+            <option value="" selected disabled>--Select a mountain--</option>
+        </select>
+        <div id="mountainInfo" class="hidden">
+            <h2 id="mountainName"></h2>
+            <img id="mountainImage" src="" alt="Mountain Image">
+            <p><strong>Elevation:</strong> <span id="mountainElevation"></span></p>
+            <p><strong>Effort:</strong> <span id="mountainEffort"></span></p>
+            <p><strong>Description:</strong> <span id="mountainDescription"></span></p>
+            <p><strong>Coordinates:</strong> <span id="mountainCoordinates"></span></p>
+            <p id="mountainOtherInfo"></p>
+        </div>
+    </div>
+    <script src="/scripts/mountainData.js"></script>
+    <script src="/scripts/mountJava.js"></script>
+    <footer>@copyright Rene Banuelos Arellano 2024</footer>
 </body>
+
 </html>
