--- a/searchNationalParks.html
+++ b/searchNationalParks.html
@@ -1,11 +1,16 @@
-<!DOCTYPE html>
+
+
+ <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Search National Parks</title>
     <link rel="stylesheet" href="/css/universalStyles.css">
-    <link rel="stylesheet" href="/css/np.css">
+    <link rel="stylesheet" href="/css/nationalPark.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
 </head>
 <body>
     <nav class="navbar">
@@ -29,13 +34,13 @@
                         <option value="">--Select State/Territory--</option>
                     </select>
                 </div>
-                <div>
+                <div><br>
                     <input type="radio" id="search-type" name="search-option" value="type">
                     <label for="search-type">Search by Park Type</label>
                     <select id="type-select" disabled>
                         <option value="">--Select Park Type--</option>
                     </select>
-                </div>
+                </div><br>
                 <button id="search-button">Search</button>
             </div>
             <div id="results"></div>
@@ -43,8 +48,9 @@
     </main>
     <script src="/scripts/locationData.js"></script>
     <script src="/scripts/parkTypeData.js"></script>
-    <script src="/scripts/n.js"></script>
-    <script src="/scripts/np.js"></script>
+    <script src="/scripts/nationalParkData.js"></script>
+    <script src="/scripts/nationalPark.js"></script>
+    <footer>@copyright Rene Banuelos Arellano 2024</footer>
 </body>
 </html>
 
