--- a/mountainInfo.html
+++ b/mountainInfo.html
@@ -1,3 +1,4 @@
+<!--MOUNTAIN INFORMATION  PAGE-->
 <!DOCTYPE html>
 <html lang="en">
 
@@ -9,13 +10,15 @@
     <link rel="stylesheet" href="/css/mountainInfo.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-        <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
-    
+    <link
+        href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
+        rel="stylesheet">
+
 </head>
 
 <body>
     <nav class="navbar">
-        <h1>National Parks</h1>
+        <h1>National Parks USA</h1>
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="searchNationalParks.html">Search National Parks</a></li>
@@ -39,7 +42,7 @@
     </div>
     <script src="/scripts/mountainData.js"></script>
     <script src="/scripts/mountJava.js"></script>
-    <footer>@copyright Rene Banuelos Arellano 2024</footer>
+    <footer>&copy;2024 Rene Banuelos Arellano </footer>
 </body>
 
 </html>
