--- a/searchNationalParks.html
+++ b/searchNationalParks.html
@@ -1,7 +1,8 @@
+<!--NATIONAL PARKS PAGE-->
 
-
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,29 +10,83 @@
     <link rel="stylesheet" href="/css/universalStyles.css">
     <link rel="stylesheet" href="/css/nationalPark.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" 
-    rel="stylesheet">
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
+        rel="stylesheet">
 
     <style>
         table {
             border-collapse: collapse;
             width: 100%;
         }
-        th, td {
-            border: 1px solid black;
+
+        th,
+        td {
+            border: 2px solid rgb(49,74, 78);;
             padding: 8px;
             text-align: left;
         }
+
         th {
-            background-color: #f2f2f2;
+            background-color: rgb(186, 201, 180);
         }
-    
+
+        @media (max-width: 1150px) {
+            table {
+                display: block;
+                width: 100%;
+                overflow-x: auto;
+            }
+
+            thead,
+            tbody,
+            th,
+            td,
+            tr {
+                display: block;
+            }
+
+            thead tr {
+                position: absolute;
+                top: -9999px;
+                left: -9999px;
+            }
+
+            tr {
+                margin: 0 0 1rem 0;
+            }
+
+            tr:nth-child(odd) {
+                background: #ccc;
+            }
+
+            td {
+                border: none;
+                border-bottom: 1px solid #eee;
+                position: relative;
+                padding-left: 50%;
+                text-align: right;
+            }
+
+            td::before {
+                position: absolute;
+                top: 0;
+                left: 6px;
+                width: 45%;
+                padding-right: 10px;
+                white-space: nowrap;
+                content: attr(data-label);
+                text-align: left;
+                font-weight: bold;
+            }
+        }
     </style>
 </head>
+
 <body>
     <nav class="navbar">
-        <h1>National Parks</h1>
+        <h1>National Parks USA</h1>
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="searchNationalParks.html">Search National Parks</a></li>
@@ -39,10 +94,10 @@
         </ul>
     </nav>
     <main>
-        <h2>Search National Parks</h2>
-        <p>Use the search feature to find information about different national parks.</p>
+        <h1>Search National Parks</h1>
+        <h4>Use the search feature to find information about different national parks.</h4>
         <div class="search-container">
-            <h1>Find Your Perfect Park</h1>
+            <h2>Find Your Perfect Park</h2>
             <div class="search-options">
                 <div>
                     <input type="radio" id="search-location" name="search-option" value="location" checked>
@@ -67,56 +122,7 @@
     <script src="/scripts/parkTypeData.js"></script>
     <script src="/scripts/nationalParkData.js"></script>
     <script src="/scripts/nationalPark.js"></script>
-    <footer>@copyright Rene Banuelos Arellano 2024</footer>
+    <footer>&copy;2024 Rene Banuelos Arellano </footer>
 </body>
-</html>
 
-<!--<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Search National Parks</title>
-    <link rel="stylesheet" href="/css/universalStyles.css">
-    <link rel="stylesheet" href="/css/np.css">
-</head>
-<body>
-    <nav class="navbar">
-        <h1>National Parks</h1>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="searchNationalParks.html">Search National Parks</a></li>
-            <li><a href="mountainInfo.html">Mountain Information</a></li>
-        </ul>
-    </nav>
-    <main>
-        <h2>Search National Parks</h2>
-        <p>Use the search feature to find information about different national parks.</p>
-        <div class="search-container">
-            <h1>Find Your Perfect Park</h1>
-            <div class="search-options">
-                <div>
-                    <input type="radio" id="search-location" name="search-option" value="location" checked>
-                    <label for="search-location">Search by Location</label>
-                    <select id="state-select">
-                        <option value="">--Select State/Territory--</option>
-                    </select>
-                </div>
-                <div>
-                    <input type="radio" id="search-type" name="search-option" value="type">
-                    <label for="search-type">Search by Park Type</label>
-                    <select id="type-select" disabled>
-                        <option value="">--Select Park Type--</option>
-                    </select>
-                </div>
-                <button id="search-button">Search</button>
-            </div>
-            <div id="results"></div>
-        </div>
-    </main>
-    <script src="/scripts/locationData.js"></script>
-    <script src="/scripts/parkTypeData.js"></script>
-    <script src="/scripts/n.js"></script>
-    <script src="/scripts/np.js"></script>
-</body>
-</html>-->
+</html>
