--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!--NATIONAL PARKS HOMEPAGE-->
-<!DOCTYPE html>
+<!DOCTYPE >
 <html lang="en">
 
 <head>
@@ -11,8 +11,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link
-        href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Bungee&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
         rel="stylesheet">
+
 </head>
 
 <body>
@@ -78,7 +79,7 @@
             </div>
         </div>
     </main>
-    <footer>&copy;2024 Rene Banuelos Arellano </footer>
+    <footer>&copy; 2024 Rene Banuelos Arellano </footer>
 
     <!-- Bootstrap JS and Popper.js -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
