--- a/mountainInfo.html
+++ b/mountainInfo.html
@@ -1,5 +1,5 @@
 <!--MOUNTAIN INFORMATION  PAGE-->
-<!DOCTYPE html>
+<!DOCTYPE >
 <html lang="en">
 
 <head>
@@ -11,7 +11,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link
-        href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Bungee&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
         rel="stylesheet">
 
 </head>
@@ -42,7 +42,7 @@
     </div>
     <script src="/scripts/mountainData.js"></script>
     <script src="/scripts/mountJava.js"></script>
-    <footer>&copy;2024 Rene Banuelos Arellano </footer>
+    <footer>&copy; 2024 Rene Banuelos Arellano </footer>
 </body>
 
 </html>
