--- a/searchNationalParks.html
+++ b/searchNationalParks.html
@@ -1,6 +1,6 @@
 <!--NATIONAL PARKS PAGE-->
 
-<!DOCTYPE html>
+<!DOCTYPE >
 <html lang="en">
 
 <head>
@@ -12,8 +12,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link
-        href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Bungee&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
         rel="stylesheet">
+
 
     <style>
         table {
@@ -21,9 +22,9 @@
             width: 100%;
         }
 
-        th,
-        td {
-            border: 2px solid rgb(49,74, 78);;
+        th,td {
+            border: 2px solid rgb(49, 74, 78);
+            ;
             padding: 8px;
             text-align: left;
         }
@@ -32,7 +33,7 @@
             background-color: rgb(186, 201, 180);
         }
 
-        @media (max-width: 1150px) {
+        @media (max-width: 1385px) {
             table {
                 display: block;
                 width: 100%;
@@ -122,7 +123,7 @@
     <script src="/scripts/parkTypeData.js"></script>
     <script src="/scripts/nationalParkData.js"></script>
     <script src="/scripts/nationalPark.js"></script>
-    <footer>&copy;2024 Rene Banuelos Arellano </footer>
+    <footer>&copy; 2024 Rene Banuelos Arellano </footer>
 </body>
 
 </html>
