--- a/mountainInfo.html
+++ b/mountainInfo.html
@@ -40,8 +40,8 @@
             <p id="mountainOtherInfo"></p>
         </div>
     </div>
-    <script src="/scripts/mountainData.js"></script>
-    <script src="/scripts/mountJava.js"></script>
+    <script src="scripts/mountainData.js"></script>
+    <script src="scripts/mountJava.js"></script>
     <footer>&copy; 2024 Rene Banuelos Arellano </footer>
 </body>
 
