--- a/searchNationalParks.html
+++ b/searchNationalParks.html
@@ -119,10 +119,10 @@
             <div id="results"></div>
         </div>
     </main>
-    <script src="/scripts/locationData.js"></script>
-    <script src="/scripts/parkTypeData.js"></script>
-    <script src="/scripts/nationalParkData.js"></script>
-    <script src="/scripts/nationalPark.js"></script>
+    <script src="scripts/locationData.js"></script>
+    <script src="scripts/parkTypeData.js"></script>
+    <script src="scripts/nationalParkData.js"></script>
+    <script src="scripts/nationalPark.js"></script>
     <footer>&copy; 2024 Rene Banuelos Arellano </footer>
 </body>
 
