--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </ul>
     </nav>
     <main class="container">
-        <h2>Welcome to National Parks</h2>
+        <h2>Welcome to National Parks USA</h2>
         <h3>Explore the beautiful national parks across the country.</h3>
         <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
